--- a/frontend/src/components/organism/create-task-form/CreateTaskForm.module.css
+++ b/frontend/src/components/organism/create-task-form/CreateTaskForm.module.css
@@ -8,6 +8,7 @@
 .container h3{
     text-align: center;
     margin: 2rem auto 1rem;
+    font-size: 1.4rem;
 }
 
 
@@ -39,8 +40,15 @@
 }
 
 .formBox label {
+    font-size: 1.1rem;
+    font-weight: 700;
     text-align: left;
     margin-bottom: 5px;
+}
+
+.errorMsg{
+    color: red;
+    font-weight: 700;
 }
 
 
