--- a/frontend/src/components/organism/task-card/TaskCard.module.css
+++ b/frontend/src/components/organism/task-card/TaskCard.module.css
@@ -4,12 +4,12 @@
     height: 50px;
     display: grid;
     grid-template-rows: 100%;
-    grid-template-columns: 6fr 2fr 1fr 1fr;
+    grid-template-columns: 2fr 4fr 3fr 1fr;
     
     align-items: center; 
     border: solid 1px rgb(215, 215, 215);
     border-radius: 6px;
-    background-color: rgb(235,235, 235);
+    background-color: rgb(249, 249, 249);
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 
 }
@@ -17,6 +17,7 @@
 .cardBox ul{
     display: flex;
     flex-direction: row;
+    padding-inline-start: 10px;
 }
 
 .cardBox li{
@@ -33,7 +34,7 @@
     font-weight: 700;
     display: inline-block;
     max-height: 20px;
-    margin: 0px 1rem;
+    margin: 0px 2px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -43,29 +44,108 @@
     color: rgb(80, 80, 80);
     font-weight: 700;
     display: inline-block;
+    text-align: center;
     max-height: 20px;
-    margin: 0px 1rem;
+    margin: 0px;
 }
 
 
 /*ボタン設定*/
-.icon{
+.startIcon{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 28px;     
     height: 28px;
     cursor: pointer;
-    color:  black;
-    background-color: white;
-    border: solid 1px grey;
-    border-radius: 10px;
+    color:  rgb(255, 255, 255);
+    background-color: rgb(113, 186, 255);
+    border: solid 1px rgb(113, 186, 255);
+    border-radius: 50%;
 }
 
+.startIcon svg{
+    font-size: 20px;
+}
+
+.pauseIcon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 28px;     
+    height: 28px;
+    cursor: pointer;
+    color:  rgb(255, 255, 255);
+    background-color: rgb(255, 113, 113);
+    border: solid 1px rgb(255, 113, 113);
+    border-radius: 50%;
+}
+
+.pauseIcon svg{
+    font-size: 20px;
+}
+
+.nomalDoneIcon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 28px;     
+    height: 28px;
+    border: solid 2px rgb(190, 190, 190);
+    border-radius: 50%;        /* 丸くする */
+    color: #ececec;             /* 枠と同じ色に */
+    cursor: pointer;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+.nomalDoneIcon svg{
+    font-size: 28px;
+}
+
+.checkDoneIcon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 28px;     
+    height: 28px;
+    border: solid 2px rgb(72, 255, 0);
+    border-radius: 50%;        /* 丸くする */
+    color: #ececec;             /* 枠と同じ色に */
+    cursor: pointer;
+    background-color: rgb(72, 255, 0);
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+
+.doneIcon svg{
+    font-size: 28px;
+    font-weight: 700;
+}
+
+
+.startIcon:hover{
+    transform: scale(1.05);
+}
+
+.pauseIcon:hover{
+    transform: scale(1.05);
+}
+
+.nomalDoneIcon:hover{
+    transform: scale(1.05);
+}
+
+.checkDoneIcon:hover{
+    transform: scale(1.05);
+}
+
+/*
 .icon:hover{
     transform: translateY(-3px);
     box-shadow: 0 4px 12px rgba(0,0,0,0.15);
 }
+    */
 
 
 
@@ -81,7 +161,7 @@
     color: black;
     background-color: rgb(255,255,255);
     border: solid 1px grey;
-    border-radius: 10px;
+    border-radius: 50%;
 }
 
 .kebabMenu svg{
