--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,15 +1,17 @@
 body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
     background-color: rgb(215, 215, 215); 
     margin: 0;
     font-family: 'Noto Sans JP', sans-serif; 
 }
 
 .container {
-    max-width: 900px;
-    min-height: 900px;
-    margin: 3rem auto;
-    padding: 3rem;
+    min-width: 100vw;
+    min-height: 100vh;
     background-color: white; 
-    border-radius: 2rem;
+    border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05); 
 }
