--- a/frontend/src/components/organism/task-card/TaskCard.module.css
+++ b/frontend/src/components/organism/task-card/TaskCard.module.css
@@ -11,7 +11,10 @@
     border-radius: 6px;
     background-color: rgb(249, 249, 249);
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
 
+.runningShadow{
+    box-shadow: 0 0 12px rgba(107, 197, 250, 0.7);
 }
 
 .cardBox ul{
