--- a/frontend/src/components/organism/task-detail/TaskDetail.module.css
+++ b/frontend/src/components/organism/task-detail/TaskDetail.module.css
@@ -31,7 +31,8 @@
 }
 
 .cancelBtn{
-    background-color: rgb(236, 74, 33);
-    color: white;
-    width: 6rem;
+    background-color: rgb(255, 255, 255);
+    color:black;
+    width: 100px;
+    border:solid 2px rgb(201, 201, 201);
 }
