--- a/frontend/src/components/organism/task-over/TaskOver.module.css
+++ b/frontend/src/components/organism/task-over/TaskOver.module.css
@@ -24,14 +24,8 @@
 }
 
 .cancelBtn{
-    background-color: rgb(236, 74, 33);
-    color: white;
-    width: 6rem;
-}
-
-.createBtn{
-    background-color: rgb(8, 144, 255);
-    color: white;
-    width: 6rem;
-    margin-left: 10px;
+    background-color: rgb(255, 255, 255);
+    color:black;
+    width: 100px;
+    border:solid 2px rgb(201, 201, 201);
 }
